<resources>
	<string name="app_name">Woodgrove</string>
	<string name="title_activity_main">MainActivity</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="verify">Verify</string>
	<string name="previous">Previous</string>

	<string name="launch_text">Woodgrove Music</string>

	<string name="landing_text">Woodgrove Music</string>
	<string name="landing_gain_access">Gain access</string>
	<string name="landing_login">Log in</string>
	<string name="landing_signup">Sign up</string>
`
	<string name="signup_intro">No account yet? No problem. Let\'s create a new account for you.</string>
	<string name="email_hint">Email</string>
	<string name="password_hint">Password</string>
	<string name="signup_name_hint">Name</string>
	<string name="signup_with_code">Sign up with one time code instead</string>
	<string name="login_with_code">Log in with one time code instead</string>

	<string name="enter_code">Please enter the code sent to your email</string>
	<string name="not_received">Didn\'t receive a code? Tap here to resend it</string>
	<string name="code_hint">Code</string>

	<string name="next_button">Next</string>
	<string name="error_title">Oops…</string>
	<string name="dismiss">Dismiss</string>
	<string name="general_error_message">An unexpected error has occurred.\nError details: %1$s</string>

	<string name="invalid_email_error">Invalid email</string>
	<string name="invalid_password_error">Invalid password</string>
	<string name="invalid_name_error">Invalid name</string>
	<string name="user_exists_error_message">An account with this email address already exists. Do you want to login instead?</string>
	<string name="go_to_login">Go to login</string>

	<string name="invalid_code_error">That code is not correct. Please try again, or request a new code to be sent.</string>
	<string name="resend_code">Resend code</string>
	<string name="code_sent">New code sent</string>

	<string name="home_text">Welcome to Woodgrove Music. Select your favourite tunes and start listening 🎵</string>
	<string name="home_my_profile">My profile</string>

	<string name="profile_text">Profile</string>

	<string name="title_feed">Feed</string>
	<string name="title_discover">Discover</string>
	<string name="title_my_music">My Music</string>
</resources>