<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LaunchActivity">

	<ImageView
		android:id="@+id/woodgrove_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/woodgrove_logo"
		android:layout_marginTop="25dp"
		app:layout_constraintBottom_toTopOf="@+id/woodgrove_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed" />

	<TextView
		android:id="@+id/woodgrove_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/landing_text"
		android:textSize="35sp"
		android:layout_marginTop="5dp"
		app:layout_constraintBottom_toTopOf="@+id/woodgrove_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/woodgrove_logo" />

	<TextView
		android:id="@+id/woodgrove_login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/landing_login"
		android:textSize="16sp"
		android:layout_marginTop="500dp"
		app:layout_constraintBottom_toTopOf="@+id/woodgrove_signup"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/woodgrove_text" />

	<TextView
		android:id="@+id/woodgrove_signup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/landing_signup"
		android:textSize="16sp"
		android:layout_marginTop="5dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/woodgrove_login" />

</androidx.constraintlayout.widget.ConstraintLayout>