<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/login_scrollContent"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:scrollbars="none"
	android:overScrollMode="never"
	android:clipToPadding="false"
	tools:background="@color/white"
	android:fillViewport="true"
	android:isScrollContainer="false">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:theme="@style/TextInputTheme"
			android:id="@+id/emailFieldLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email_hint"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:layout_marginBottom="15dp"
			app:endIconMode="clear_text"
			android:textColorHint="@color/theme_colour_1_darker"
			app:boxStrokeColor="@color/theme_colour_1_darker"
			android:textColor="@color/theme_colour_1_darker"
			app:hintTextColor="@color/theme_colour_1_darker"
			app:endIconTint="@color/theme_colour_1_darker"
			android:layout_marginTop="100dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/login_emailField"
				android:autofillHints="username"
				android:layout_width="match_parent"
				android:inputType="textEmailAddress|textNoSuggestions"
				android:layout_height="match_parent" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:theme="@style/TextInputTheme"
			android:id="@+id/passwordFieldLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password_hint"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:layout_marginBottom="15dp"
			android:layout_marginTop="25dp"
			app:endIconMode="password_toggle"
			android:textColorHint="@color/theme_colour_1_darker"
			app:boxStrokeColor="@color/theme_colour_1_darker"
			android:textColor="@color/theme_colour_1_darker"
			app:hintTextColor="@color/theme_colour_1_darker"
			app:endIconTint="@color/theme_colour_1_darker"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/emailFieldLayout" >

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/login_passwordField"
				android:autofillHints="password"
				android:layout_width="match_parent"
				android:inputType="textPassword|textNoSuggestions"
				android:layout_height="match_parent" />

		</com.google.android.material.textfield.TextInputLayout>

		<TextView
			android:id="@+id/loginWithCode"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="42dp"
			android:layout_marginEnd="40dp"
			android:layout_marginTop="10dp"
			android:textSize="11sp"
			android:text="@string/login_with_code"
			android:textColor="@color/theme_colour_1_darker"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/passwordFieldLayout"/>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/login_emailPasswordContainer"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="30dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent">

			<android.widget.Button
				android:id="@+id/login_emailPasswordNext"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:padding="10dp"
				android:textSize="12sp"
				android:gravity="center"
				android:text="@string/next"
				app:backgroundTint="@null"
				android:background="@drawable/bg_selector_white_rounded_border"
				android:textColor="@drawable/text_selector_button"
				android:enabled="false"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>

			<com.google.android.material.progressindicator.CircularProgressIndicator
				android:id="@+id/login_next_loader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:indeterminate="true"
				android:visibility="invisible"
				tools:visibility="visible"
				app:indicatorSize="20dp"
				android:elevation="10dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>